<resources>
    <string name="app_name">SpaceX</string>

    <!-- Company Info Text -->
    <string name="company_info">%s was founded by  %s in  %s. It has now  %s employees,  %s launch sites, and is valued at USD  %s</string>
    <string name="date_data">%s at %s</string>
    <string name="rocket_data">%s/%s</string>
    <string name="days_since_now">Days since now</string>
    <string name="days_from_now">Days from now</string>
    <string name="days_data">+/- %s</string>

    <!-- Error Messages-->
    <string name="no_links">This launch event has no media links</string>
    <string name="error_links">Unable to load link</string>
    <string name="no_internet">Please check your internet connection and try again</string>

    <!-- Bottom Action Sheet -->
    <string name="links">Links</string>
    <string name="article">Article</string>
    <string name="webcast">Webcast</string>
    <string name="wikipedia">Wikipedia</string>

    <!-- Filter Dialog -->
    <string name="filter_button">Filter button</string>
    <string name="filter_by_year">FILTER BY YEAR</string>
    <string name="year">YEAR</string>
    <string name="asc_desc">ASC/DESC</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="failure">FAILURE</string>
    <string name="success">SUCCESS</string>
    <string name="launch_status">LAUNCH STATUS</string>

    <!-- Launch Items -->
    <string name="launch">Launches</string>
    <string name="title">title</string>
    <string name="launch_image">Launch image</string>
    <string name="mission">Mission</string>
    <string name="date_time">Date/time</string>
    <string name="rocket">Rocket</string>
    <string name="days">Days %s now</string>
    <string name="date">Date</string>

    <!-- Material Dialog text -->
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_info">Info</string>
    <string name="text_yes">Yes</string>
    <string name="text_apply">Apply</string>
    <string name="text_filter">Filter</string>
    <string name="text_search">Search</string>
    <string name="unknown">UNKNOWN</string>
    <string name="all">ALL</string>

</resources>
